Fixing h2 spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,6 @@ h1 {
     font-size: 30px;
     font-weight: 900;
     margin-bottom: -5px;
-      margin-top: -10px;
   }
 
   h3  {
@@ -189,9 +188,8 @@ h1 {
 }
 
 h2 {
-  padding-top: 10px;
+  margin-top: 0;
 }
-
 h3 {
   font-size: 25px;
 }
